--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=inventory-movies-back
+spring.datasource.url=jdbc:postgresql://localhost:5432/inventory_movies
+spring.datasource.username=inventory_movies
+spring.datasource.password=inventory_movies
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+server.port=8090
